# Agentic_solutions

./: README.md
DevSecOps Deployment Gatekeeper/devops-deployment-security-gate/: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Early_Documentation  README.md  docker-compose.yml  pyproject.toml  requirements.txt  samplerequirements  setup.py  test_project.py
DevSecOps Deployment Gatekeeper/devops-deployment-security-gate/.github/workflows/: ci.yml  deployment.yml  security-scan.yml
DevSecOps Deployment Gatekeeper/devops-deployment-security-gate/docs/: api_reference.md  architecture.md  comprehensive_guide.md  contributing.md  quick_start.md
DevSecOps Deployment Gatekeeper/devops-deployment-security-gate/examples/: README.md  github_action_example.yml  security_check_example.py
DevSecOps Deployment Gatekeeper/devops-deployment-security-gate/logs/: security-gate.json
DevSecOps Deployment Gatekeeper/devops-deployment-security-gate/src/devops_deployment_security_gate/: __init__.py  __main__.py  health.py  main.py  web.py
DevSecOps Deployment Gatekeeper/devops-deployment-security-gate/src/devops_deployment_security_gate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
DevSecOps Deployment Gatekeeper/devops-deployment-security-gate/src/tests/: __init__.py  run_tests.py  test_agents.py  test_integrations.py  test_main.py  test_security_models.py  test_tools.py
HGA/: README.md  demo_app.py  pyproject.toml  repo.txt  requirements.txt  run_app.py  simple_demo.py
HGA/docs/: api_reference.md  architecture.md  index.md  setup.md  testing.md  troubleshooting.md  usage.md
HGA/docs/user_guides/: getting_started.md
HGA/knowledge_base/hypothesis_examples/: common_hypothesis_formulations.md
HGA/knowledge_base/statistical_guides/: statistical_notation_standards.md
HGA/knowledge_base/test_selection_guides/: statistical_test_decision_tree.md
HGA/scripts/: build_docs.sh  ingest_knowledge_base.py  run_tests.sh  setup_dev_env.sh
HGA/src/hypothesis_generation_agent/: alternate_main.py  api_server.py  cli.py  crew.py  crew_alternate.py  main.py
HGA/src/hypothesis_generation_agent/agents/: base_agents.py  context_extractor.py  hypothesis_generator.py  hypothesis_librarian.py  hypothesis_refiner.py  reviewer.py  statistical_validator.py  test_recommender.py
HGA/src/hypothesis_generation_agent/config/: __init__.py  agents.yaml  config_loader.py  llm_config.yaml  logging_config.yaml  mkdocs.yml  tasks.yaml
HGA/src/hypothesis_generation_agent/tasks/: __init__.py  base_task.py  extract_context.py  generate_hypotheses.py  recommend_test.py  review_output.py  store_hypothesis.py  validate_consistency.py
HGA/src/hypothesis_generation_agent/tools/: __init__.py  file_tools.py  library_tools.py  rag_tools.py  validation_tools.py
HGA/src/hypothesis_generation_agent/utils/: __init__.py  formatters.py  llm.py  validators.py
Trading_Agent/: README.md  TEST_TOOLS.py  VERIFY_SETUP.py  VERIFY_SYNTAX.py  demo.py  pyproject.toml  requirements.txt  setup.py  test_implementation.py  test_model_integration.py  test_restructure.py  test_structure.py
Trading_Agent/docs/: architecture.md  development.md  testing.md  user_guide.md
Trading_Agent/models/: __init__.py  financial_sentiment_model.py  risk_factor_model.py  volatility_model.py
Trading_Agent/reference_documentation/: EXECUTION_GUIDE.md  FINAL_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md
Trading_Agent/src/autonomous_trading_crew/: __init__.py  crew.py  main.py
Trading_Agent/src/autonomous_trading_crew/agents/: __init__.py  explainability_reporter.py  market_intelligence_analyst.py  risk_management_officer.py  trade_execution_specialist.py
Trading_Agent/src/autonomous_trading_crew/config/: agents.yaml  tasks.yaml
Trading_Agent/src/autonomous_trading_crew/examples/: __init__.py  interactive_analysis.ipynb
Trading_Agent/src/autonomous_trading_crew/tasks/: __init__.py  decision_explanation_report.py  multi_modal_signal_synthesis.py  risk_assessment_guardrail_check.py  tax_optimized_execution_plan.py
Trading_Agent/src/autonomous_trading_crew/tools/: __init__.py  financial_data_tool.py  financial_sentiment_tool.py  predictive_analytics_tool.py  (+3 more)
Trading_Agent/tests/: __init__.py  run_tests.py  test_agents.py  test_tasks.py  test_tools.py
financial_reconciliation_automation/: README.md  pyproject.toml
financial_reconciliation_automation/.github/workflows/: ci.yml
financial_reconciliation_automation/data/sample/: invoices.csv  transactions.csv
financial_reconciliation_automation/docs/: api_reference.md  architecture.md  setup.md  user_guide.md
financial_reconciliation_automation/examples/: financial_reconciliation_example.py  langchain_tools_example.py  run_reconciliation.py  run_ui.py  ui_example.py
financial_reconciliation_automation/scripts/: deploy.sh  run_tests.sh  setup_env.sh
financial_reconciliation_automation/src/financial_reconciliation_automation/: crew.py  main.py
financial_reconciliation_automation/tests/: test_agents.py  test_chains.py  test_integration.py  test_langchain_tools.py  test_tasks.py  test_tools.py
financial_reconciliation_automation/tests/fixtures/: sample_invoices.json  sample_transactions.json
github_profile_optimizer/: .pre-commit-config.yaml  Dockerfile  GitHub_Profile_Optimizer_Model_Training.ipynb  Makefile  Makefile.ps1  README.md  pyproject.toml  requirements.txt
github_profile_optimizer/.github/workflows/: ci.yml
github_profile_optimizer/scripts/: run_dashboard.py  setup-dev.ps1  setup-dev.sh  test-enterprise-features.py  test-installation.py  test_dashboard.py  test_dashboard_cli.py  test_ml_optimizer.py  train_model.py  verify_dashboard.py
github_profile_optimizer/src/github_profile_optimizer/: __init__.py  api.py  crew.py  exceptions.py  health.py  main.py  metrics.py
github_profile_optimizer/tests/: conftest.py
github_profile_optimizer/tests/unit/: test_audit_service.py  test_base_tool.py  test_logger.py  test_optimization_engine.py  test_safety_checker.py  test_state_manager.py  test_validators.py
(+94 files in other folders)
