[project]
name = "hypothesis_generation_agent"
version = "0.1.0"
description = "A multi-agent AI system to automate statistical hypothesis generation."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.60.0,<1.0.0"
]

[project.scripts]
hga = "hypothesis_generation_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/hypothesis_generation_agent"]