[project]
name = "autonomous_trading_crew"
version = "0.1.0"
description = "autonomous_trading_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "yfinance>=0.2.18",
    "pandas>=1.5.3",
    "numpy>=1.24.3",
    "scikit-learn>=1.3.0",
    "torch>=2.0.1",
    "transformers>=4.33.0",
    "statsmodels>=0.14.0",
    "joblib>=1.3.0"
]

[project.scripts]
autonomous_trading_crew = "autonomous_trading_crew.main:run"
run_crew = "autonomous_trading_crew.main:run"
train = "autonomous_trading_crew.main:train"
replay = "autonomous_trading_crew.main:replay"
test = "autonomous_trading_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"