[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-deployment-security-gate"
version = "1.0.0"
description = "DevSecOps Deployment Gatekeeper - Automated Security Checks for CI/CD"
readme = "README.md"
authors = [
    {name = "DevSecOps Team", email = "security@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance"
]
keywords = ["devsecops", "security", "ci-cd", "github", "sonarqube", "slack"]
dependencies = [
    "crewai>=0.177.0,<1.0.0",
    "crewai-tools>=0.40.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=0.19.0",
    "PyYAML>=5.4.1",
    "requests>=2.25.1"
]
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/example/devops-deployment-security-gate"
Documentation = "https://github.com/example/devops-deployment-security-gate/blob/main/README.md"
Repository = "https://github.com/example/devops-deployment-security-gate.git"
"Bug Tracker" = "https://github.com/example/devops-deployment-security-gate/issues"

[project.scripts]
devsecops-gate = "devops_deployment_security_gate.main:main"
security-gate = "devops_deployment_security_gate.core.orchestrator:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["devops_deployment_security_gate*"]

[tool.setuptools.package-data]
devops_deployment_security_gate = ["config/*.yaml", "config/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src/devops_deployment_security_gate",
    "--cov-report=html",
    "--cov-report=term-missing"
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true